@startuml archi-diagram-v3

' Layers
package "API Layer" {
    class PropertyController
    class InvestmentController
    class UserController
    class WalletController
}

package "Application Layer" {
    class PropertyService
    class InvestmentService
    class UserService
    class WalletService
    class NotificationService
    class CertificateService
}

package "Domain Layer" {
    class Property {
      - id: UUID
      - name: String
      - type: String
      - price: double
      - fundingDeadline: Date
      - fundingStatus: String
      + calculateRentalIncome(): double
      + calculateAppreciation(): double
    }

    class User {
      - id: UUID
      - name: String
      - email: String
      - wallet: Wallet
      + register(): void
      + login(): void
    }

    class Investment {
      - id: UUID
      - property: Property
      - user: User
      - sharePercentage: double
      - investmentAmount: double
      + calculateReturns(): double
    }

    class Wallet {
      - id: UUID
      - balance: double
      + credit(amount: double): void
      + debit(amount: double): void
      + getBalance(): double
    }

    class Certificate {
      - id: UUID
      - property: Property
      - user: User
      - issuedDate: Date
    }

    class DomainService {
      + handleConcurrency(): void
      + notifyInvestors(): void
      + validateInvestment(): void
      + refundInvestors(): void
    }
}

package "Infrastructure Layer" {
    class PropertyRepository
    class InvestmentRepository
    class UserRepository
    class WalletRepository
    class CertificateRepository
    class StripePaymentGateway
    class EmailService
    class NotificationService
}

' Relationships
PropertyController --> PropertyService
UserController --> UserService
InvestmentController --> InvestmentService
WalletController --> WalletService

PropertyService --> PropertyRepository
InvestmentService --> InvestmentRepository
InvestmentService --> PropertyService
UserService --> UserRepository
WalletService --> WalletRepository
CertificateService --> CertificateRepository

NotificationService --> EmailService
NotificationService --> StripePaymentGateway

DomainService --> Property
DomainService --> Investment
DomainService --> Wallet

InvestmentService --> Investment
InvestmentService --> Property
UserService --> User
WalletService --> Wallet
CertificateService --> Certificate

Property "1" -- "*" Investment
User "1" -- "*" Investment
User "1" -- "1" Wallet
Investment "1" -- "1" Certificate
Property "1" -- "*" Certificate

@enduml
